fix: fit content into input / settings box on mobile landscape

--- a/css/index.scss
+++ b/css/index.scss
@@ -45,7 +45,7 @@ footer {
 }
 
 #sankey-input-box {
-  height: 60vh;
+  min-height: 60vh;
   resize: vertical;
 }
 
@@ -74,7 +74,7 @@ footer {
 }
 
 #sankey-input-textarea {
-  height: calc(100% - 2 * 0.75rem);
+  height: calc(60vh - 2 * 0.75rem);
   resize: none;
 }
 
@@ -125,6 +125,10 @@ li {
 @media screen and (min-width: $tablet) {
   #sankey-input-box {
     height: 50vh;
+  }
+
+  #sankey-input-textarea {
+    height: calc(100% - 2 * 0.75rem);
   }
 
   #sankey-svg {
